# shared-memory-allocator

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: lib.rs
